# fast-trading-data-processor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ComputeDaySummaryDynamicVisitor.cpp  ComputeDaySummaryDynamicVisitor.h  ComputeDaySummaryStaticVisitor.cpp  ComputeDaySummaryStaticVisitor.h  ComputeDaySummaryVisitor.h  DayHistory.h  DaySummary.h  Library.h  LoadTradingDataDynamicVisitor.cpp  LoadTradingDataDynamicVisitor.h  LoadTradingDataStaticVisitor.cpp  LoadTradingDataStaticVisitor.h  LoadTradingDataVisitor.h  Makefile  README.md  ReadableTradeStructures.h  SaveDaySummaryDynamicVisitor.cpp  SaveDaySummaryDynamicVisitor.h  SaveDaySummaryStaticVisitor.cpp  SaveDaySummaryStaticVisitor.h  SaveDaySummaryVisitor.h  Stock.h  TradeTraits.h  TradeTransaction.h  cmake_install.cmake  main.cpp
.github/workflows/: cmake.yml
cmake/modules/: CodeCoverage.cmake
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fast-trading-data-processor-tests[1]_include.cmake  fast-trading-data-processor-tests[1]_tests.cmake  main_test.cpp
